# cs2-player-tools

./: .gitignore  BUILD.md  CLAUDE.md
.claude/: settings.local.json
.github/workflows/: build-windows.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json  windows-manifest.xml
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/wireguard/: README.md  download-wireguard.py
app/src-tauri/src/: lib.rs
app/src-tauri/src/network/: advanced_diag.rs  cmd.rs  cs2_config.rs  deploy.rs  diagnostics.rs  history.rs  mod.rs  optimizer.rs  ping.rs  process.rs  region_block.rs  sdr.rs  settings.rs  vpn.rs
app/src/components/: DevTools.tsx  Layout.tsx  Sidebar.tsx  StatusBar.tsx  TokenGate.tsx
app/src/lib/: hq.ts  tauri.ts  valve.ts
app/src/pages/: Cs2Config.tsx  Dashboard.tsx  History.tsx  Home.tsx  NetworkDiag.tsx  Placeholder.tsx  ServerPicker.tsx  Settings.tsx  SmartVPN.tsx  WinOptimizer.tsx
docs/: DESIGN-V2.md
docs/kb/: 01-valve-infrastructure.md  02-cs2-network-protocol.md  03-network-diagnostics.md  04-windows-network-optimizations.md  05-wireguard-vpn-gaming.md  06-app-feature-roadmap.md  README.md  knowledge-base.html
hq-backend/: package-lock.json  package.json  server.js  vpn-deploy.js
hq-backend/data/: telemetry.json
hq-frontend/: index.html
